# electrotrack-saas

./: .env.example  .gitignore  SESSION_MEMORY.md  memory.md
.github/workflows/: backend-ci.yml  desktop-release.yml  frontend-ci.yml
designs/: techbill-landing-page.html
electrotrack-api/src/: main.ts
electrotrack-pos/: index.html  package-lock.json  package.json  vite.config.ts
electrotrack-pos/src/: App.tsx
graphify-out/: .graphify_ast.json  .graphify_ast_script.py  .graphify_cache_check.py  .graphify_chunk_01.json  .graphify_detect.json  .graphify_root  .graphify_uncached.txt  .read_chunk1.py  .write_chunk1.py
graphify-out/cache/: stat-index.json
prisma/: schema.prisma
scratch/: generate_landing.py
tech-bill-app/: build_output.txt  gradle.properties
tech-bill-app/Appss/: MOBILE_MVP.md  MOBILE_PRD.md
tech-bill-app/app/: build.gradle.kts
techbill-api/: activate_sub.js  activate_sub.js.map  check_users.js  check_users.js.map  create_dha.js  create_dha.js.map  eslint.config.mjs  list_users.js  list_users.js.map  update_moiz.js  update_moiz.js.map  update_superadmin.js  update_superadmin.js.map
techbill-api/prisma/: schema.prisma
techbill-api/src/: app.controller.ts  main.ts
techbill-api/test/: app.e2e-spec.ts  jest-e2e.json
techbill-pos/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
techbill-pos/src/: App.tsx  bootstrap.ts  (+1 more)
techbill-pos/src-tauri/: Cargo.toml  tauri.conf.json
techbill-pos/src-tauri/capabilities/: default.json
techbill-pos/src-tauri/icons/: icon.icns
techbill-pos/src-tauri/src/: main.rs
(+118 files in other folders)
